# lego-sorter

./: .gitattributes  .gitignore  .ruff.toml  AGENTS.md  AI_IMPROVEMENTS_SUMMARY.md  CHANGELOG.md  CONTEXT.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  run_lego_sorter.py
.github/: copilot-instructions.md
.github/chatmodes/: python.chatmode.md
blender/: animate_lego_physics.py  belt-example.blend  clear_scene.py  create_conveyor_belt.py  create_sorting_bucket.py  diagnose_raycast_frame20.py  import_lego_parts.py  inspect_parts_state.py  lego_parts.blend  render_snapshot.py  setup_lighting.py
docs/: ARCHITECTURE.md  COMMON_TASKS.md  GLOSSARY.md  TESTING_GUIDE.md  TYPE_IGNORE_GUIDE.md  UV.md
docs/meta/: DOCUMENTATION_OPTIMIZATION_SUMMARY.md
tests/: README.md  test_physics.py  test_scenarios.py
typings/: bpy.pyi  mathutils.pyi
utils/: __init__.py  blender_debug.py  blender_mcp_client.py  validate_scene.py
